# BehaviourLock

./: .env  .env.example  .gitignore  .tool-versions  INTEGRATION.md  OVERVIEW.md  TECHNICAL_README.md  bloc_memory.db  docgen_prompt.md  index.html  main.py  pyproject.toml  readme.md  requirements.txt  session_id.txt  sid.txt  tailwind.config.ts
api/: app.py
bloc_chroma/: 557597d0827f845f_biz_logic.json  557597d0827f845f_functions.json
frontend/: index.html
frontend/css/: app.css
frontend/js/: api.js  main.js  state.js
models/: docgen_state.py  state.py
multi-agent/: app.py  db.py  docgen_qa_node.py  docgen_scanner_node.py  docgen_writer_node.py  reporter_node.py  requirements.txt  validator_node.py  vector_store.py
pipeline/: docgen_graph.py  graph.py
pipeline/nodes/: baseline_runner_node.py  dead_code_node.py  docgen_proofreader_node.py  docgen_qa_node.py  docgen_scanner_node.py  docgen_writer_node.py  ingest_node.py  migrator_node.py  reporter_node.py  risk_gate_node.py  testgen_node.py  validator_node.py  workflow_miner_node.py
sample_legacy/: payment_processor.py
src/: App.tsx  index.css
src/behaviour_lock/: __init__.py  __main__.py  agent.py  db.py  main.py  models.py  prompts.py  rag.py
src/components/: AgentPipeline.tsx  AnalysisDashboard.tsx  AnalysisLoading.tsx  CollaborationScreen.tsx  Header.tsx  MeshBackground.tsx  MigrationAnimation.tsx  MigrationResults.tsx  MigrationScreen.tsx  RequirementsPanel.tsx  RequirementsPanelV2.tsx  RequirementsScreen.tsx  (+10 more)
storage/: memory.py  vector_store.py
utils/: json_utils.py  notifications.py
(+39 files in other folders)
