[project]
name = "behaviour-lock"
version = "0.1.0"
description = "CLI chat agent for legacy code migration"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "chromadb>=0.5.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
behaviour-lock = "behaviour_lock.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/behaviour_lock"]
